# ChangeLog for sys-process/fcron
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/ChangeLog,v 1.88 2010/09/13 05:46:23 josejx Exp $

  13 Sep 2010; Joseph Jezak <josejx@gentoo.org> fcron-3.0.6-r1.ebuild:
  Marked ppc stable for bug #330727.

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org> fcron-3.0.6-r1.ebuild:
  ia64/sparc stable wrt #330727

  27 Aug 2010; Zac Medico <zmedico@gentoo.org> metadata.xml:
  Use valid atoms in flag restrict attributes.

  18 Aug 2010; Jeroen Roovers <jer@gentoo.org> fcron-3.0.6-r1.ebuild:
  Stable for HPPA (bug #330727).

  01 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  fcron-3.0.6-r1.ebuild:
  x86 stable wrt bug #330727

  01 Aug 2010; Markos Chandras <hwoarang@gentoo.org> fcron-3.0.6-r1.ebuild:
  Stable on amd64 wrt bug #330727

  01 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org> -fcron-3.0.6.ebuild,
  fcron-3.0.6-r1.ebuild:
  Remove old version and fix a message.

*fcron-3.0.6-r1 (14 May 2010)

  14 May 2010; Diego E. Pettenò <flameeyes@gentoo.org> fcron-3.0.6.ebuild,
  +fcron-3.0.6-r1.ebuild:
  Fix handling of classic-style crontab following Wolfram's suggestion:
  /etc/crontab is no longer installed by this, and check_system_crontabs is
  set up to work out correctly the location of the fcrontab file.

  04 May 2010; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata and sign manifest with updated keys.

*fcron-3.0.6 (04 May 2010)

  04 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -fcron-3.0.4-r1.ebuild, -fcron-3.0.4-r2.ebuild,
  -files/fcron-3.0.4-docfix.patch, +fcron-3.0.6.ebuild, -files/fcron.init:
  Version bump and cleanup old versions. The 3.0.6 merges most of our custom
  changes so it's mostly vanilla.

  24 Apr 2010; Raúl Porcel <armin76@gentoo.org> fcron-3.0.5-r2.ebuild:
  Add ~arm wrt #314629

  15 Apr 2010; Brent Baude <ranger@gentoo.org> fcron-3.0.5-r2.ebuild:
  Marking fcron-3.0.5-r2 ppc for bug 308075
