@@ -1,6 +1,12 @@
 # ChangeLog for sys-process/fcron
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/ChangeLog,v 1.88 2010/09/13 05:46:23 josejx Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/ChangeLog,v 1.89 2011/04/15 16:22:50 beandog Exp $
+
+*fcron-3.0.6-r2 (15 Apr 2011)
+
+  15 Apr 2011; Steve Dibb <beandog@gentoo.org> +fcron-3.0.6-r2.ebuild:
+  Re-add installing crontab file, bug 332901; Restore old crontab binary
+  symlink
 
   13 Sep 2010; Joseph Jezak <josejx@gentoo.org> fcron-3.0.6-r1.ebuild:
   Marked ppc stable for bug #330727.
